meegotouchhome (1.1.5~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#259022 - Duplicated application icons in main menu

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 22 Jul 2011 11:59:14 +0300

meegotouchhome (1.1.4-1) unstable; urgency=low

  * Fixes: NB#270603 - Launcher icon in "dimmed" state when dismissing error dialog by tapping on it
  * Fixes: NB#250144 - Desktop entry parsing is not optimized in launcher
  * Fixes: NB#248129 - Paging canceling behavior is off
  * Fixes: NB#260216 - COREWEB: MWidgetModel::styleName MTheme::style MStyleContainer::updateCurrentStyle MStyleContainer::currentStyle operator->
  * Fixes: NB#267590 - swiping application having VKB on top in recents view - appears an image of application where the image is going to place.
  * Fixes: NB#269423 - QLB is empty with the following steps

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 22 Jul 2011 11:57:53 +0300

meegotouchhome (1.1.3-1) unstable; urgency=low

  * Fixes: NB#255976 - [TASK] Launcher icon disappearing should be animated

 -- Pauli Lehtinen <pauli.lehtinen@nokia.com>  Wed, 29 Jun 2011 14:59:14 +0300

meegotouchhome (1.1.2-1) unstable; urgency=low

  * Changes: Enabler to fix 255416
  * Changes: Make virtual removeLauncherButton in launcher

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Wed, 29 Jun 2011 13:25:43 +0300

meegotouchhome (1.0.4-1) unstable; urgency=low

  * Fixes: NB#270272 - Sometimes there are no notifications on lockscreen for received SMS

 -- Pankaj Saharan <pankaj.saharan@nokia.com>  Thu, 07 Jul 2011 18:56:10 +0300

meegotouchhome (1.0.3-1) unstable; urgency=low

  * Fixes: NB#264707 - [ JUNIPERQA-17432] Store client state is broken on launcher grid after canceling an update

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 13 Jun 2011 09:26:12 +0300

meegotouchhome (1.0.2-1) unstable; urgency=low
